src/compose/tests/invalid_identifiers/global.wgsl
#define_import_path globals

pub var<private> fine: f32 = 1.0;
pub var<private> bad_: f32 = 1.0;
